test/libsolidity/syntaxTests/functionTypes/function_type_parameters_with_names.sol
contract C {
    function(uint a) f;
}
// ----
// SyntaxError: (26-32): Arguments in function types may not be named.
